--- a/index.html
+++ b/index.html
@@ -1,10 +1,51 @@
-<h1>Main</h1>
-<h2>not main header</h2>
+<!DOCTYPE html>
+<html lang="en">
 
-Hello world!
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Page</title>
+</head>
 
-<p>i am document</p>
+<body>
+    <h2>Мотивация</h2>
 
-<p>If Chrome does not start in Ubuntu 22.04, probably the problem is in Wayland and GPU drivers. <br><br>
-    You can try disabling Wayland and swich to old Xorg. Just open /etc/gdm3/custom.conf and uncommend or add the
-    WaylandEnable=false line:</p>
+    <p>Я, как технический директор, регулярно сталкиваюсь с необходимостью обсудить с <br> командой архитектуру
+        нового приложения или микросервиса. И в рамках таких <br> обсуждений я понял, что не существует единого
+        подхода,
+        который позволил бы <br> эффективно общаться команде, обсуждая архитектурные решения.</p>
+
+    <p>Понятно, что на словах это не объяснишь и приходится прибегать к
+        дополнительным инструментам в виде доски и маркера или же при текущих реалиях -
+        online доски типа Miro. Но даже в этом случае обсуждение сваливается в хаотично нарисованные квадратики,
+        круги или прямоугольники с текстом, как-то соединённые стрелками.</p>
+
+    <p>При этом от обсуждения к обсуждению одна и так же схема может быть нарисована 1000 разными способами. Кто-то
+        в творческом порыве начинает рисовать иконки пользователей или серверов, а кто-то рисует поток из 10
+        стрелок, чтобы показать <a href="https://yandex.ru/" target="_blank">все возможные варианты взаимодействия.</a>
+        И это - не
+        эффективная коммуникация, где одно и тоже можно понять по-разному при этом потратив какое-то время на пояснение
+        чем шестиугольник отличается круга.</p>
+
+    <h2>А что есть?</h2>
+
+    <ul>Осознав проблемы я первым делом начал искать готовые варианты. Вот несколько из них:
+        <li>Диаграмма классов - иногда бывает удобной для анализа уже существующего кода, <br>но не применима для
+            изначального проектирования, где мы оперируем более<br> верхне уровневыми объектами.</li>
+        <li>c4model - уже ближе к теме и предлагает 4 уровня детализации схемы программного обеспечения. Но часто из
+            всех 4-х уровней подходит 3-й, когда мы планируем новый сервис, а на 3-м уровне стандартов описания немного.
+            Отлично подходит для верхнего уровня описания системы, но при детализации на компоненты не имеет детальных
+            стандартов.</li>
+    </ul>
+
+    <ul>Потому после нескольких экспериментов, я решил подготовить простую нотацию, которая позволит описать архитектуру
+        приложений на том уровне, чтобы мы могли:
+        <li>Разбить создание его на задачи.</li>
+        <li>Проверить корректность деления на модули, чтобы сократить их связанность.</li>
+        <li>Упростить коммуникацию в команде при обсуждении деталей проектирования приложения.</li>
+        <li>Использовать её для документирования архитектуры как монолита, так и микросервисов.</li>
+    </ul>
+
+</body>
+
+</html>
