--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
     <h2>Мотивация</h2>
 
+    <!--Comment-->
+    <img src="./images/kos.jpg" alt="Костик" />
+    <br><br><br>
+
+
+    <img src="http://cdn-bucket.hb.bizmrg.com/purple-images/posts/ps-architecture-notation/image2.jpg"
+        alt="Внутренние связи" />
+
     <p>Я, как технический директор, регулярно сталкиваюсь с необходимостью обсудить с <br> командой архитектуру
         нового приложения или микросервиса. И в рамках таких <br> обсуждений я понял, что не существует единого
         подхода,
